# LangGraph-agent-demo

./: README.md  create_graph.ipynb  main.py  manage.py  pyproject.toml
frontend/agentui/: apps.py
frontend/mainapp/: views.py
frontend/mainapp/templates/: index.html  index.html.new
frontend/webapp/: settings.py  urls.py
